--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<title>2800CLOTHES</title>
 		<style>
+		body {
+			background-image: url("http://wallpapercave.com/wp/4W1jq4d.jpg");
+		}
 			#navcontainer ul
 			{
 			margin: 0;
@@ -31,12 +34,12 @@
 
 		</style>
 	</head>
-	<body background="lv2.jpg">>
+	<body background=url(http://wallpapercave.com/wp/4W1jq4d.jpg);>
 
 		<div class="container">
 			<br/>
 			<!--this is the break tag, and will add a little bit of padding between the top of the page and our jumbotron-->
-			<div class="jumbotron" style= "background-image: url(vlone.jpg);">
+			<div class="jumbotron" style= "background-image: url(https://68.media.tumblr.com/ce05d9c4c02270b03604ff06829be503/tumblr_ohrur0dDmK1rmnqqgo1_500.jpg);">
 				<!--we'll put our main project info in here-->
 				<!--if you want to see more bootstrap elements that you can use, check out http://getbootstrap.com/components-->
 
